<resources>
    <string name="app_name">MVPEjemplo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="total_de_donaciones">Total de donaciones:</string>
    <string name="ingresa_donacion">Ingresa una nueva donación</string>
    <string name="nueva_donacion">Nueva donación</string>
    <string name="hacer_donacion">Hacer donación</string>
</resources>